<resources>

    <string name="app_name">Braineff</string>
    <string name="kb_inc_ptr">\u003e</string>
    <string name="kb_dec_ptr">\u003c</string>
    <string name="kb_inc_data">\u002b</string>
    <string name="kb_dec_data">\u002d</string>
    <string name="kb_output_data">\u002e</string>
    <string name="kb_input_data">\u002c</string>
    <string name="kb_jump_forward">\u005b</string>
    <string name="kb_jump_backward">\u005d</string>
    <string name="kb_tab">\u21e5</string>
    <string name="kb_backspace">\u2190</string>
    <string name="kb_space">sp</string>
    <string name="kb_enter">\u21b2</string>
    <string name="menu_editor_compile">Compile File</string>
    <string name="menu_editor_compile_condensed">Compile</string>
    <string name="editor_filename_hint">(untitled)</string>
    
    <string name="interepter_toolbar_title">Interpreter</string>
    
    <string name="menu_console_run">Run</string>
    
    <string name="console_output_title">Console Output</string>
    <string name="console_input_title">Console Input</string>
    
    <string name="drawer_compile_title">Compile</string>
    <string name="drawer_open_file_title">Open File</string>
    <string name="drawer_save_file_title">Save File</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_about_braineff">About Braineff</string>
    
    <string name="save_file_fragment_title">Save file as&#8230;</string>
    <string name="save_file_filename_hint">untitled.bf</string>
    <string name="save_file_toast_success">File successfully saved as: %s</string>
    <string name="save_file_toast_failure">An error occurred while saving the file: %s</string>
    <string name="save_file_toast_storage_failure">"Unable to access mounted storage!\nLoading and saving files is unavailable."</string>
    
    <string name="load_file_fragment_title">Load file&#8230;</string>
    <string name="load_file_msg_no_files">No files found in the /Braineff folder.</string>
	<string name="load_file_toast_success">File successfully loaded: %s</string>
	<string name="load_file_toast_failure">An error occurred while loading the file: %s</string>
</resources>